# ollama-x

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.devcontainer/: backend.Dockerfile  devcontainer.json  docker-compose.yml  frontend.Dockerfile
.devcontainer/backend/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/frontend/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.docker/: Dockerfile  docker-compose.yml
.github/workflows/: devcontainer-publish.yml  docker-publish.yml
frontend/: Dockerfile  generate-api.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.js  App.tsx  main.tsx  styles.css
frontend/src/client/: index.ts
frontend/src/client/models/: APIError.ts  APIErrorDetails_Literal__AccessDenied___.ts  APIErrorDetails_Literal__DuplicateKeyError___.ts  APIErrorDetails_Literal__ProjectNotFound___.ts  APIErrorDetails_Literal__ServerNotFound___.ts  APIErrorDetails_Literal__UserAlreadyExist___.ts  APIErrorDetails_Literal__UserAlreadyInProject___.ts  APIErrorDetails_Literal__UserNotFound___.ts  APIErrorDetails_TypeVar_.ts  APIError_AccessDenied_.ts  APIError_DuplicateKeyError_.ts  APIError_ProjectNotFound_.ts  APIError_ServerNotFound_.ts  APIError_UserAlreadyExist_.ts  APIError_UserAlreadyInProject_.ts  APIError_UserNotFound_.ts  APIServer.ts  BaseCompletionOptions.ts  ContextProvider_Literal__code___NoneType_.ts  ContextProvider_Literal__codebase___NoneType_.ts  ContextProvider_Literal__diff___NoneType_.ts  ContextProvider_Literal__docs___DocsParameters__Input.ts  ContextProvider_Literal__docs___DocsParameters__Output.ts  ContextProvider_Literal__open___OpenParameters_.ts  ContextProvider_Literal__search___NoneType_.ts  ContextProvider_Literal__url___NoneType_.ts  ContinueConfig.ts  ContinueDevProject.ts  CreateProjectRequest.ts  CreateUserRequest.ts  CustomCommand.ts  DocsParameters.ts  DocsSite.ts  EmbeddingsProvider.ts  JoinResult.ts  ModelRequestOptions.ts  Model_Literal__ollama___.ts  OllamaListModelsResponse.ts  OllamaModel.ts  OllamaModelDetails.ts  (+11 more)
frontend/src/client/services/: AdminService.ts  ContinueService.ts  OllamaService.ts  ServerService.ts  UserService.ts
frontend/src/components/: Layout.tsx  LoadingState.tsx  ProtectedRoute.tsx  ServerStatusIcon.tsx  UserAuthorization.js  UserCreation.js
frontend/src/hooks/: AuthContext.ts  AuthProvider.tsx  authTypes.ts  index.ts  useAuth.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Login.tsx  Projects.tsx  Servers.tsx  Users.tsx
frontend/src/tests/: App.test.js
frontend/src/utils/: api.ts
nginx/: proxy.conf
ollama_x/: app.py  client.py  config.py  scheduler.py  startup.py  types.py
ollama_x/api/: __init__.py  continue_dev.py  endpoints.py  exceptions.py  helpers.py  ollama.py  openai.py  proxy.py  refact.py  security.py  server.py  user.py
ollama_x/api/middleware/: __init__.py  continue_dev.py  default.py  langfuse.py  ollama.py
ollama_x/client/: inner.py  ollama.py
ollama_x/model/: __init__.py  continue_dev.py  exceptions.py  helpers.py  ollama.py  openai.py  refact.py  server.py  session.py  user.py
ollama_x_client/api/continue_dev/: create_project.py  get_project.py  list_projects.py
ollama_x_client/api/server/: create_server.py  delete_server.py  get_server.py  update_server.py
ollama_x_client/api/user/: create_user.py  delete_user.py  get_user.py  reset_user_key.py
ollama_x_client/models/: __init__.py  api_error_literal_user_not_found.py  api_error_literal_user_not_found_code.py  api_server.py  base_completion_options.py  code_context_provider.py  codebase_context_provider.py  create_project_request.py  create_user_request.py  diff_context_provider.py  docs_context_provider.py  docs_parameters.py  embeddings_provider.py  model_request_options.py  ollama_model.py  open_context_provider.py  open_parameters.py  project_config.py  request_options.py  search_context_provider.py  tab_autocomplete_model.py  url_context_provider.py  user.py  user_base.py
