[project]
name = "ollama-x"
version = "0.1.1"
description = "Ollama Proxy Server with Extensions"
authors = [
    { name = "Yury Sokov (Yurzs)", email = "me@yurzs.dev" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112,<1",
    "pydantic-mongo-document>=1.0,<2.0",
    "aiohttp>=3.10.3",
    "apscheduler>=3.10.4",
    "langfuse>=2.43.3",
    "email-validator>=2.2.0",
    "sentry-sdk[fastapi]>=2.13.0",
    "openapi-cli>=0.2",
    "sse-starlette>=2.1.3",
    "pytz>=2024.2",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "pydantic>=2.8.2",
    "uvicorn>=0.30,<1",
    "pydantic-conf>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "plumbum>=1.8.3",
    "ruff>=0.6.2",
    "openapi-cli[full]>=0.2",
    "types-python-jose>=3.4.0.20250224",
    "types-passlib>=1.7.7.20241221"
]

[project.scripts]
ollama-x = "openapi_cli.cli:main"
ollama-x-scheduler = "ollama_x.scheduler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ollama_x"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["B"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = 100

[tool.hatch.metadata]
allow-direct-references = true
